MODON MRE BPDEV/force-app/main/default/objects/Unit__c/Unit__c.object-meta.xml
<CustomObject>
    <description>This object is part of inventory management to store the unit details</description>
    <label>Unit</label>
    <nameField>
        <encryptionScheme>None</encryptionScheme>
        <label>Unit Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Units</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>