MODON MRE BPDEV/force-app/main/default/objects/Unit__c/fields/ADGMUnitNumber__c.field-meta.xml
<CustomField>
    <fullName>ADGMUnitNumber__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>ADGM Unit Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>