MODON MRE BPDEV/force-app/main/default/objects/Unit__c/fields/ADM_Plot_Number__c.field-meta.xml
<CustomField>
    <fullName>ADM_Plot_Number__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>ADM Plot Number</label>
    <length>18</length>
    <type>Text</type>
</CustomField>