MODON MRE BPDEV/force-app/main/default/objects/Unit__c/fields/ADM_Sector_Plot_reference_Number__c.field-meta.xml
<CustomField>
    <fullName>ADM_Sector_Plot_reference_Number__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>ADM Sector Plot reference Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>