MODON MRE BPDEV/force-app/main/default/objects/Unit__c/fields/AED_SQM__c.field-meta.xml
<CustomField>
    <fullName>AED_SQM__c</fullName>
    <label>AED/SQM</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>