MODON MRE BPDEV/force-app/main/default/objects/Unit__c/fields/Aging__c.field-meta.xml
<CustomField>
    <fullName>Aging__c</fullName>
    <formula>IF(
   ISBLANK(Status_Change_Time__c),
    &quot;Not yet Released&quot;,
    TEXT(TODAY() - DATEVALUE(Status_Change_Time__c)) &amp; &quot; days&quot;
)</formula>
    <label>Aging</label>
    <type>Text</type>
</CustomField>