MODON MRE BPDEV/force-app/main/default/objects/Unit__c/fields/Allocate_to_Agency__c.field-meta.xml
<CustomField>
    <fullName>Allocate_to_Agency__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Allocate to Agency</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Units</relationshipLabel>
    <relationshipName>Units</relationshipName>
    <type>Lookup</type>
</CustomField>