MODON MRE BPDEV/force-app/main/default/objects/Unit__c/fields/Allow_Partial_Booking__c.field-meta.xml
<CustomField>
    <fullName>Allow_Partial_Booking__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Allow Partial Booking</label>
    <type>Checkbox</type>
</CustomField>