MODON MRE BPDEV/force-app/main/default/objects/Unit__c/fields/ApprovalStatus__c.field-meta.xml
<CustomField>
    <fullName>ApprovalStatus__c</fullName>
    <label>Approval Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Draft</fullName>
                <default>true</default>
                <label>Draft</label>
            </value>
            <value>
                <fullName>Released</fullName>
            </value>
            <value>
                <fullName>UnReleased</fullName>
            </value>
            <value>
                <fullName>Approved</fullName>
                <isActive>false</isActive>
                <label>Approved</label>
            </value>
            <value>
                <fullName>Awaiting Approval</fullName>
                <isActive>false</isActive>
                <label>Awaiting Approval</label>
            </value>
            <value>
                <fullName>Blocked</fullName>
                <isActive>false</isActive>
                <label>Blocked</label>
            </value>
            <value>
                <fullName>Rejected</fullName>
                <isActive>false</isActive>
                <label>Rejected</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>