MODON MRE BPDEV/force-app/main/default/objects/Unit__c/fields/AreaUnitofMeasure__c.field-meta.xml
<CustomField>
    <fullName>AreaUnitofMeasure__c</fullName>
    <label>Area Unit of Measure</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>SQM</fullName>
            </value>
            <value>
                <fullName>SQFT</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>