MODON MRE BPDEV/force-app/main/default/objects/Unit__c/fields/BalconyArea__c.field-meta.xml
<CustomField>
    <fullName>BalconyArea__c</fullName>
    <label>Balcony Area</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>