MODON MRE BPDEV/force-app/main/default/objects/Unit__c/fields/Base_Price_8Y_EGP__c.field-meta.xml
<CustomField>
    <fullName>Base_Price_8Y_EGP__c</fullName>
    <label>Base Price 8Y EGP</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>