MODON MRE BPDEV/force-app/main/default/objects/Unit__c/fields/BlockComment__c.field-meta.xml
<CustomField>
    <fullName>BlockComment__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Block Comment</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>