MODON MRE BPDEV/force-app/main/default/objects/Unit__c/fields/Blocked_Time__c.field-meta.xml
<CustomField>
    <fullName>Blocked_Time__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Blocked Time</label>
    <type>DateTime</type>
</CustomField>