MODON MRE BPDEV/force-app/main/default/objects/Unit__c/fields/BlockedBy__c.field-meta.xml
<CustomField>
    <fullName>BlockedBy__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Blocked By</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Units</relationshipName>
    <type>Lookup</type>
</CustomField>