MODON MRE BPDEV/force-app/main/default/objects/Unit__c/fields/BlockedFor__c.field-meta.xml
<CustomField>
    <fullName>BlockedFor__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Blocked For</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Units1</relationshipName>
    <type>Lookup</type>
</CustomField>