MODON MRE BPDEV/force-app/main/default/objects/Unit__c/fields/BlockReason__c.field-meta.xml
<CustomField>
    <fullName>BlockReason__c</fullName>
    <description>Using by both MRE and MIRE</description>
    <label>Block Reason</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Sales Order Cancelled</fullName>
            </value>
            <value>
                <fullName>Blocked</fullName>
            </value>
            <value>
                <fullName>Blocked BY HOS</fullName>
            </value>
            <value>
                <fullName>Hold</fullName>
            </value>
            <value>
                <fullName>Hold By Development</fullName>
            </value>
            <value>
                <fullName>Hold By Management</fullName>
            </value>
            <value>
                <fullName>Hold Future Release</fullName>
            </value>
            <value>
                <fullName>Test A</fullName>
                <isActive>false</isActive>
                <label>Test A</label>
            </value>
            <value>
                <fullName>Test B</fullName>
                <isActive>false</isActive>
                <label>Test B</label>
            </value>
            <value>
                <fullName>Test C</fullName>
                <isActive>false</isActive>
                <label>Test C</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>