MODON MRE BPDEV/force-app/main/default/objects/Unit__c/fields/BlockUntil__c.field-meta.xml
<CustomField>
    <fullName>BlockUntil__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Block Until</label>
    <type>DateTime</type>
</CustomField>