MODON MRE BPDEV/force-app/main/default/objects/Unit__c/fields/Broker_Sales__c.field-meta.xml
<CustomField>
    <fullName>Broker_Sales__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Broker Sales</label>
    <type>Checkbox</type>
</CustomField>