MODON MRE BPDEV/force-app/main/default/objects/Unit__c/fields/Building_No__c.field-meta.xml
<CustomField>
    <fullName>Building_No__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Building No</label>
    <length>50</length>
    <type>Text</type>
</CustomField>