MODON MRE BPDEV/force-app/main/default/objects/Unit__c/fields/BuildingNameArabic__c.field-meta.xml
<CustomField>
    <fullName>BuildingNameArabic__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Building Name Arabic</label>
    <length>255</length>
    <type>Text</type>
</CustomField>