MODON MRE BPDEV/force-app/main/default/objects/Unit__c/fields/BuildingNo__c.field-meta.xml
<CustomField>
    <fullName>BuildingNo__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Building No.</label>
    <length>50</length>
    <type>Text</type>
</CustomField>