MODON MRE BPDEV/force-app/main/default/objects/Unit__c/fields/BuiltUpArea__c.field-meta.xml
<CustomField>
    <fullName>BuiltUpArea__c</fullName>
    <label>Built Up Area (BUA)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>