MODON MRE BPDEV/force-app/main/default/objects/Unit__c/fields/Checkout_Booking_Ref__c.field-meta.xml
<CustomField>
    <fullName>Checkout_Booking_Ref__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <externalId>true</externalId>
    <label>Checkout Booking Ref</label>
    <length>100</length>
    <type>Text</type>
</CustomField>