MODON MRE BPDEV/force-app/main/default/objects/Unit__c/fields/ContractType__c.field-meta.xml
<CustomField>
    <fullName>ContractType__c</fullName>
    <label>Contract Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>SPA</fullName>
            </value>
            <value>
                <fullName>SPA (Building)</fullName>
            </value>
            <value>
                <fullName>No SPA Available</fullName>
            </value>
            <value>
                <fullName>Musataha</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>