MODON MRE BPDEV/force-app/main/default/objects/Unit__c/fields/Design_Options__c.field-meta.xml
<CustomField>
    <fullName>Design_Options__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Design Options</label>
    <length>20</length>
    <type>Text</type>
</CustomField>