MODON MRE BPDEV/force-app/main/default/objects/Unit__c/fields/District__c.field-meta.xml
<CustomField>
    <fullName>District__c</fullName>
    <formula>Phase__r.Project__r.District__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>District</label>
    <type>Text</type>
</CustomField>