MODON MRE BPDEV/force-app/main/default/objects/Unit__c/fields/DPG_Unit_Image_URL__c.field-meta.xml
<CustomField>
    <fullName>DPG_Unit_Image_URL__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>DPG Unit Image URL</label>
    <length>255</length>
    <type>Text</type>
</CustomField>