MODON MRE BPDEV/force-app/main/default/objects/Unit__c/fields/DraftUnitPlanPublicURL__c.field-meta.xml
<CustomField>
    <fullName>DraftUnitPlanPublicURL__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Draft Unit Plan Public URL</label>
    <type>Url</type>
</CustomField>