MODON MRE BPDEV/force-app/main/default/objects/Unit__c/fields/DriversRoomArea__c.field-meta.xml
<CustomField>
    <fullName>DriversRoomArea__c</fullName>
    <label>Drivers Room Area</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>