MODON MRE BPDEV/force-app/main/default/objects/Unit__c/fields/floor__c.field-meta.xml
<CustomField>
    <fullName>floor__c</fullName>
    <label>floor</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>LG</fullName>
            </value>
            <value>
                <fullName>G</fullName>
            </value>
            <value>
                <fullName>GF</fullName>
            </value>
            <value>
                <fullName>F1</fullName>
            </value>
            <value>
                <fullName>F2</fullName>
            </value>
            <value>
                <fullName>F3</fullName>
            </value>
            <value>
                <fullName>F4</fullName>
            </value>
            <value>
                <fullName>F5</fullName>
            </value>
            <value>
                <fullName>F6</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>