MODON MRE BPDEV/force-app/main/default/objects/Unit__c/fields/FloorAreaRatioFAR__c.field-meta.xml
<CustomField>
    <fullName>FloorAreaRatioFAR__c</fullName>
    <label>Floor Area Ratio (FAR)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>