MODON MRE BPDEV/force-app/main/default/objects/Unit__c/fields/FloorNumber__c.field-meta.xml
<CustomField>
    <fullName>FloorNumber__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Floor Number</label>
    <length>20</length>
    <type>Text</type>
</CustomField>