MODON MRE BPDEV/force-app/main/default/objects/Unit__c/fields/Garage__c.field-meta.xml
<CustomField>
    <fullName>Garage__c</fullName>
    <label>Garage</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>