MODON MRE BPDEV/force-app/main/default/objects/Unit__c/fields/IFC_Unit_Number__c.field-meta.xml
<CustomField>
    <fullName>IFC_Unit_Number__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>IFC Unit Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>