MODON MRE BPDEV/force-app/main/default/objects/Unit__c/fields/InventoryStatus__c.field-meta.xml
<CustomField>
    <fullName>InventoryStatus__c</fullName>
    <formula>IF( OR(ISPICKVAL(Status__c ,&apos;Available&apos;),ISPICKVAL(Status__c , &apos;Blocked&apos;), ISPICKVAL(Status__c , &apos;Booking Confirmed&apos;), ISPICKVAL(Status__c , &apos;Sold&apos;)), &apos;Released&apos;, IF(ISPICKVAL(Status__c ,&apos;Unreleased&apos;), &apos;Unreleased&apos;, &apos;Draft&apos;))</formula>
    <label>Inventory Status</label>
    <type>Text</type>
</CustomField>