MODON MRE BPDEV/force-app/main/default/objects/Unit__c/fields/Is_Agency_Formulae__c.field-meta.xml
<CustomField>
    <fullName>Is_Agency_Formulae__c</fullName>
    <formula>if ( TEXT(Opportunity__r.LeadSource) =&apos;Broker Portal&apos;, true, false)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Is Agency Formulae</label>
    <type>Checkbox</type>
</CustomField>