MODON MRE BPDEV/force-app/main/default/objects/Unit__c/fields/is_New_Unit__c.field-meta.xml
<CustomField>
    <fullName>is_New_Unit__c</fullName>
    <formula>IF(DATEVALUE(CreatedDate) &gt;= DATE(2025, 4, 6), true, false)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>is New Unit</label>
    <type>Checkbox</type>
</CustomField>