MODON MRE BPDEV/force-app/main/default/objects/Unit__c/fields/IsAgency__c.field-meta.xml
<CustomField>
    <fullName>IsAgency__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Agency</label>
    <type>Checkbox</type>
</CustomField>