MODON MRE BPDEV/force-app/main/default/objects/Unit__c/fields/Island_Name__c.field-meta.xml
<CustomField>
    <fullName>Island_Name__c</fullName>
    <formula>Phase__r.Project__r.District__r.Island__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Island Name</label>
    <type>Text</type>
</CustomField>