MODON MRE BPDEV/force-app/main/default/objects/Unit__c/fields/IsUnitAvailable__c.field-meta.xml
<CustomField>
    <fullName>IsUnitAvailable__c</fullName>
    <formula>ISPICKVAL( Status__c , &apos;Available&apos;)|| ISPICKVAL( Status__c , &apos;CCMD&apos;)</formula>
    <label>Is Unit Available</label>
    <type>Checkbox</type>
</CustomField>