MODON MRE BPDEV/force-app/main/default/objects/Unit__c/fields/LandOwner__c.field-meta.xml
<CustomField>
    <fullName>LandOwner__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Land Owner</label>
    <length>255</length>
    <type>Text</type>
</CustomField>