MODON MRE BPDEV/force-app/main/default/objects/Unit__c/fields/Maid_s_Ro__c.field-meta.xml
<CustomField>
    <fullName>Maid_s_Ro__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Maid s Ro</label>
    <type>Checkbox</type>
</CustomField>