MODON MRE BPDEV/force-app/main/default/objects/Unit__c/fields/Masterplan_Error__c.field-meta.xml
<CustomField>
    <fullName>Masterplan_Error__c</fullName>
    <description>To save error message if callout fails</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Masterplan Error</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>