MODON MRE BPDEV/force-app/main/default/objects/Unit__c/fields/Masterplan_Last_Sync__c.field-meta.xml
<CustomField>
    <fullName>Masterplan_Last_Sync__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Masterplan Last Sync</label>
    <type>DateTime</type>
</CustomField>