MODON MRE BPDEV/force-app/main/default/objects/Unit__c/fields/Masterplan_Status__c.field-meta.xml
<CustomField>
    <fullName>Masterplan_Status__c</fullName>
    <label>Masterplan Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Success</fullName>
            </value>
            <value>
                <fullName>Failed</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>