MODON MRE BPDEV/force-app/main/default/objects/Unit__c/fields/Masterplan_URL__c.field-meta.xml
<CustomField>
    <fullName>Masterplan_URL__c</fullName>
    <description>Stores the URL which we got as a response from Oracle</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Masterplan URL</label>
    <length>255</length>
    <type>Text</type>
</CustomField>