MODON MRE BPDEV/force-app/main/default/objects/Unit__c/fields/New_Plot_No__c.field-meta.xml
<CustomField>
    <fullName>New_Plot_No__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>New Plot No</label>
    <length>40</length>
    <type>Text</type>
</CustomField>