MODON MRE BPDEV/force-app/main/default/objects/Unit__c/fields/Nintex_SPA_Ready__c.field-meta.xml
<CustomField>
    <fullName>Nintex_SPA_Ready__c</fullName>
    <formula>IF(
    AND(
        ISPICKVAL(Phase__r.SPA_Generation_Approach__c, &quot;Nintex&quot;),
        Phase__r.Name = &quot;Golf Estate Villas&quot;,
        OR(
            Typology__c = &quot;Range Villa&quot;,
            Typology__c = &quot;Fairway Villa&quot;,
            Typology__c = &quot;Golf Mansion&quot;
        )
    ),
    &quot;SPA Ready&quot;,
    &quot;SPA Not Ready&quot;
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Nintex SPA Ready</label>
    <type>Text</type>
</CustomField>