MODON MRE BPDEV/force-app/main/default/objects/Unit__c/fields/Non_Citizen_Price__c.field-meta.xml
<CustomField>
    <fullName>Non_Citizen_Price__c</fullName>
    <label>Non Citizen Price</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>