MODON MRE BPDEV/force-app/main/default/objects/Unit__c/fields/NotToBeShownOnRD__c.field-meta.xml
<CustomField>
    <fullName>NotToBeShownOnRD__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Not To Be Shown On RD</label>
    <type>Checkbox</type>
</CustomField>