MODON MRE BPDEV/force-app/main/default/objects/Unit__c/fields/Number_of_Bedrooms__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Bedrooms__c</fullName>
    <label>Number of Bedrooms</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>0</fullName>
            </value>
            <value>
                <fullName>1</fullName>
            </value>
            <value>
                <fullName>2</fullName>
            </value>
            <value>
                <fullName>3</fullName>
            </value>
            <value>
                <fullName>4</fullName>
            </value>
            <value>
                <fullName>5</fullName>
            </value>
            <value>
                <fullName>5 Plus</fullName>
            </value>
            <value>
                <fullName>6</fullName>
            </value>
            <value>
                <fullName>7</fullName>
            </value>
            <value>
                <fullName>8</fullName>
            </value>
            <value>
                <fullName>9</fullName>
            </value>
            <value>
                <fullName>10</fullName>
            </value>
            <value>
                <fullName>11</fullName>
                <isActive>false</isActive>
                <label>11</label>
            </value>
            <value>
                <fullName>49</fullName>
                <isActive>false</isActive>
                <label>49</label>
            </value>
            <value>
                <fullName>99</fullName>
                <isActive>false</isActive>
                <label>99</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>