MODON MRE BPDEV/force-app/main/default/objects/Unit__c/fields/NumberofAllocatedParking__c.field-meta.xml
<CustomField>
    <fullName>NumberofAllocatedParking__c</fullName>
    <label>Number of Allocated Parking</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>