MODON MRE BPDEV/force-app/main/default/objects/Unit__c/fields/Numberofbalcony__c.field-meta.xml
<CustomField>
    <fullName>Numberofbalcony__c</fullName>
    <label>Number of balcony</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>