MODON MRE BPDEV/force-app/main/default/objects/Unit__c/fields/Numberofbathroom__c.field-meta.xml
<CustomField>
    <fullName>Numberofbathroom__c</fullName>
    <label>Number of bathroom</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>