MODON MRE BPDEV/force-app/main/default/objects/Unit__c/fields/Numberofmaidroom__c.field-meta.xml
<CustomField>
    <fullName>Numberofmaidroom__c</fullName>
    <label>Number of maid room</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>