MODON MRE BPDEV/force-app/main/default/objects/Unit__c/fields/NumberOfResidentialUnits__c.field-meta.xml
<CustomField>
    <fullName>NumberOfResidentialUnits__c</fullName>
    <label>Number of Residential Units</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>