MODON MRE BPDEV/force-app/main/default/objects/Unit__c/fields/NumberofStoreRooms__c.field-meta.xml
<CustomField>
    <fullName>NumberofStoreRooms__c</fullName>
    <label>Number of Store Rooms</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>