MODON MRE BPDEV/force-app/main/default/objects/Unit__c/fields/OICIntegrationMessage__c.field-meta.xml
<CustomField>
    <fullName>OICIntegrationMessage__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>OICIntegrationMessage</label>
    <length>5000</length>
    <type>LongTextArea</type>
</CustomField>