MODON MRE BPDEV/force-app/main/default/objects/Unit__c/fields/OICIntegrationStatus__c.field-meta.xml
<CustomField>
    <fullName>OICIntegrationStatus__c</fullName>
    <label>OICIntegrationStatus</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>S</fullName>
                <label>Success</label>
            </value>
            <value>
                <fullName>E</fullName>
                <label>Failed</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>