MODON MRE BPDEV/force-app/main/default/objects/Unit__c/fields/OICNoOfRetries__c.field-meta.xml
<CustomField>
    <fullName>OICNoOfRetries__c</fullName>
    <label>OICNoOfRetries</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>