MODON MRE BPDEV/force-app/main/default/objects/Unit__c/fields/OldName__c.field-meta.xml
<CustomField>
    <fullName>OldName__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Old Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>