MODON MRE BPDEV/force-app/main/default/objects/Unit__c/fields/OldStatus__c.field-meta.xml
<CustomField>
    <fullName>OldStatus__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Old Status</label>
    <length>255</length>
    <type>Text</type>
</CustomField>