MODON MRE BPDEV/force-app/main/default/objects/Unit__c/fields/OraclePartyId__c.field-meta.xml
<CustomField>
    <fullName>OraclePartyId__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>OraclePartyId</label>
    <length>10</length>
    <type>Text</type>
</CustomField>