MODON MRE BPDEV/force-app/main/default/objects/Unit__c/fields/PalantirUnitType__c.field-meta.xml
<CustomField>
    <fullName>PalantirUnitType__c</fullName>
    <label>Palantir Unit Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Villa</fullName>
            </value>
            <value>
                <fullName>Apartment</fullName>
            </value>
            <value>
                <fullName>Townhouse</fullName>
            </value>
            <value>
                <fullName>Plot</fullName>
            </value>
            <value>
                <fullName>Duplex</fullName>
            </value>
            <value>
                <fullName>Mansion</fullName>
            </value>
            <value>
                <fullName>Mega Mansion</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>