MODON MRE BPDEV/force-app/main/default/objects/Unit__c/fields/ParentUnitUsageType__c.field-meta.xml
<CustomField>
    <fullName>ParentUnitUsageType__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Parent Unit Usage Type</label>
    <length>50</length>
    <type>Text</type>
</CustomField>