MODON MRE BPDEV/force-app/main/default/objects/Unit__c/fields/Pass_id__c.field-meta.xml
<CustomField>
    <fullName>Pass_id__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Pass id</label>
    <length>16</length>
    <type>Text</type>
</CustomField>